recup des champs en cours

--- a/vm/Makefile
+++ b/vm/Makefile
@@ -5,7 +5,7 @@
 ## Login   <merran_g@epitech.net>
 ## 
 ## Started on  Mon Oct 21 13:28:05 2013 Geoffrey Merran
-## Last update Sat Mar 29 19:39:40 2014 Geoffrey Merran
+## Last update Wed Apr  2 10:49:20 2014 Geoffrey Merran
 ##
 
 RM	= rm -f
@@ -24,7 +24,7 @@ LIB	= ../libmy/
 SRC	= main.c  \
 	vm_pars.c \
 	vm_init.c \
-	vm_getchamp.c \
+	vm_getchamp.c vm_getchamp2.c \
 	xfunction.c
 
 all:		libs $(NAME)
