--- a/vm/Makefile
+++ b/vm/Makefile
@@ -5,7 +5,7 @@
 ## Login   <merran_g@epitech.net>
 ## 
 ## Started on  Mon Oct 21 13:28:05 2013 Geoffrey Merran
-## Last update Wed Apr  2 10:49:20 2014 Geoffrey Merran
+## Last update Mon Apr  7 13:28:19 2014 Geoffrey Merran
 ##
 
 RM	= rm -f
@@ -25,6 +25,9 @@ SRC	= main.c  \
 	vm_pars.c \
 	vm_init.c \
 	vm_getchamp.c vm_getchamp2.c \
+	vm_arena.c \
+	vm_proc.c \
+	my_free.c \
 	xfunction.c
 
 all:		libs $(NAME)
