--- a/vm/Makefile
+++ b/vm/Makefile
@@ -5,7 +5,7 @@
 ## Login   <merran_g@epitech.net>
 ## 
 ## Started on  Mon Oct 21 13:28:05 2013 Geoffrey Merran
-## Last update Tue Apr  8 12:55:31 2014 Geoffrey Merran
+## Last update Tue Apr  8 14:32:39 2014 Geoffrey Merran
 ##
 
 RM	= rm -f
@@ -27,7 +27,11 @@ SRC	= main.c  \
 	vm_getchamp.c vm_getchamp2.c \
 	vm_arena.c \
 	vm_instruction.c \
+	vm_instruction2.c \
+	vm_instruction3.c \
+	vm_instruction4.c \
 	vm_proc.c \
+	op.c \
 	my_free.c \
 	xfunction.c
 
