--- a/vm/Makefile
+++ b/vm/Makefile
@@ -5,7 +5,7 @@
 ## Login   <merran_g@epitech.net>
 ## 
 ## Started on  Mon Oct 21 13:28:05 2013 Geoffrey Merran
-## Last update Tue Apr  8 16:14:09 2014 Geoffrey Merran
+## Last update Tue Apr  8 19:33:56 2014 Geoffrey Merran
 ##
 
 RM	= rm -f
@@ -25,21 +25,23 @@ SRC	= main.c  \
 	vm_pars.c \
 	vm_init.c \
 	vm_getchamp.c vm_getchamp2.c \
-	vm_arena.c \
+	vm_arena.c vm_arena2.c \
 	vm_instruction.c \
 	vm_instruction2.c \
 	vm_instruction3.c \
 	vm_instruction4.c \
 	vm_proc.c \
+	aff.c \
 	op.c \
 	my_free.c \
 	term_fct.c \
-	xfunction.c
+	xfunction.c \
+	sdl_xfunction.c \
 
 all:		libs $(NAME)
 
 $(NAME):	$(OBJ)
-	$(CC) -o $(NAME) $(OBJ) -lmy -L$(LIB) -lncurses
+	$(CC) -o $(NAME) $(OBJ) -lmy -L$(LIB) -lncurses -lSDL
 
 libs:
 	make -C $(LIB)
