--- a/assembleur/Makefile
+++ b/assembleur/Makefile
@@ -22,6 +22,7 @@ SRC		=	src/main.c				\
 			src/error_instruction2.c		\
 			src/error_instruction3.c		\
 			src/error_instruction4.c		\
+			src/pof.c				\
 
 SRC_LOADING	=	makefile_deco/loading.c
 
