--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -5,14 +5,14 @@
 ## Login   <merran_g@epitech.net>
 ## 
 ## Started on  Mon Oct 21 13:28:05 2013 Geoffrey Merran
-## Last update Sat Apr 12 21:20:53 2014 Geoffrey Merran
+## Last update Sun Apr 13 17:14:55 2014 Geoffrey Merran
 ##
 
 RM	= rm -f
 
 CC	= cc
 
-CFLAGS	+= -Wextra -Wall -W -pedantic -g3 -ansi -I$(I_PATH)
+CFLAGS	+= -Wextra -Wall -W -pedantic -O3 -ansi -I$(I_PATH)
 I_PATH	= ../includes/
 
 NAME	= corewar
@@ -26,7 +26,7 @@ LIB	= ../libmy/
 SRC	= main.c  \
 	vm_pars.c \
 	vm_init.c \
-	vm_getchamp.c vm_getchamp2.c \
+	vm_getchamp.c vm_getchamp2.c vm_getchamp3.c \
 	vm_arena.c vm_arena2.c \
 	vm_instruction.c \
 	vm_instruction2.c \
@@ -46,7 +46,7 @@ all:		libs $(NAME)
 
 $(NAME):	$(OBJ)
 	cp police/$(FONT) /tmp/
-	$(CC) -o $(NAME) $(OBJ) -lmy -L$(LIB) -lSDL -lSDL_ttf
+	$(CC) -o $(NAME) $(OBJ) -lmy -L$(LIB) -lSDL -lSDL_ttf -lSDL_mixer
 
 libs:
 	make -C $(LIB)
@@ -57,6 +57,7 @@ clean:
 
 fclean:		clean
 	$(RM) $(NAME)
+	$(RM) /tmp/$(FONT)
 	(cd $(LIB); make fclean)
 
 re:		fclean all
